fixed dialog content that is too big
Dialog content that is larger than the viewport should now scroll.  Also transparency was taken out.

--- a/slickqaweb/static/resources/shared/slick-dialog/slick-dialog.less
+++ b/slickqaweb/static/resources/shared/slick-dialog/slick-dialog.less
@@ -6,7 +6,6 @@
   .rounded-corners(@dialog-rounded-corners);
   .glow-big;
   background: black;
-  opacity: .95;
 }
 
 .slick-dialog.ng-hide-remove {
@@ -68,6 +67,9 @@
   .faded;
   text-align: center;
   .rounded-top-corners(@dialog-rounded-corners);
+  width: 100%;
+  position: absolute;
+  top: 0;
 }
 
 .slick-dialog-title h2 {
@@ -77,7 +79,11 @@
 }
 
 .slick-dialog-body {
+  position: absolute;
+  top: .5in;
+  bottom: .5in;
   padding: .05in;
+  overflow-y: scroll;
 }
 
 .slick-dialog-button-row {
